test/types/tuple/bradc/tupleOfNonIterableTypes.good
tupleOfNonIterableTypes.chpl:3: error: cannot iterate over values of type R
